[package]
name = "blazox"
version = "0.1.0"
edition = "2024"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "coinbase_market_data_cluster_demo"
path = "examples/coinbase_market_data_cluster_demo.rs"

[dependencies]
base64 = "0.22"
bytes = "1.10"
crc32c = "0.6"
flate2 = "1.1"
futures-util = "0.3"
gethostname = "1.0"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
